# quadratic_equation

./: .gitignore  CMakeLists.txt  README.md  README.md.txt
src/: interpreters.cpp  interpreters.h  main.cpp  solver.cpp  solver.h
tests/: test_quadratic.cpp
